Deprecation: replace new Character(char) with Character.valueOf(char)